--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.16.2",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.5",
-    "vue": "^2.4.2"
+    "vue": "^2.4.2",
+    "express": "^4.16.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -29,7 +30,6 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
